@@ -4,6 +4,7 @@
   `color_trc` and `chroma_location`.
 * Add `tell` to `Av`.
 * Add `Av.set_input_metadata`
+* Add [on_unhandled_packet] to `Av.read_input`.
 * Cleaned up support for subtitles.
 
 1.2.8 (01-01-2026)
